--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,31 @@
 <h1>Welcome Home!</h1>
 
-<p><%= Author.find(123715).name %> </p>
+<%# <form >
+    <label for="average_rating">Average Rating</label>
+    <input type="text" id="average_rating" name="average_rating">
+    <button type="submit">Submit</button>
+</form> %>
+
+<h2>QUERY 0</h2>
+<%= form_tag(there_path, data: {turbo: false}) do%>
+    <%= label_tag(:ave_rating, "Enter rating") %>
+    <%= text_field_tag :ave_rating %><br>
+    <%= label_tag(:review_count, "Enter review count") %>
+    <%= text_field_tag :review_count %> <br><br>
+    <%= submit_tag("Submit")%>
+<% end %>
+<br><br>
+
+<h2>QUERY 1</h2>
+<%= form_tag(query1_path, data: {turbo: false}) do%>
+    <%= label_tag(:genre1, "Enter genre 1") %>
+    <%= text_field_tag :genre1 %> <br>
+    <%= label_tag(:genre2, "Enter genre 2") %>
+    <%= text_field_tag :genre2 %> <br><br>
+    <%= submit_tag("Submit") %>
+<% end %>
+
+
+
+
+ 
