--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,5 @@
 <h1>Welcome Home!</h1>
 
-<%# <form >
-    <label for="average_rating">Average Rating</label>
-    <input type="text" id="average_rating" name="average_rating">
-    <button type="submit">Submit</button>
-</form> %>
-
 <h2>QUERY 0</h2>
 <%= form_tag(there_path, data: {turbo: false}) do%>
     <%= label_tag(:ave_rating, "Enter rating") %>
@@ -21,9 +15,15 @@
     <%= label_tag(:genre1, "Enter genre 1") %>
     <%= text_field_tag :genre1 %> <br>
     <%= label_tag(:genre2, "Enter genre 2") %>
-    <%= text_field_tag :genre2 %> <br><br>
+    <%= text_field_tag :genre2 %> <br>
+    <%= label_tag(:year_lower, "From: ") %>
+    <%= text_field_tag :year_lower %> <br>
+    <%= label_tag(:year_upper, "To: ") %>
+    <%= text_field_tag :year_upper %> <br><br>
     <%= submit_tag("Submit") %>
 <% end %>
+
+
 
 
 
