--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,17 +1,4 @@
-<h1>Welcome Home!</h1>
-
-<h2>QUERY </h2>
-<%= form_tag(query1_path, data: {turbo: false}) do%>
-    <%= label_tag(:genre1, "Enter genre 1") %>
-    <%= text_field_tag :genre1 %> <br>
-    <%= label_tag(:genre2, "Enter genre 2") %>
-    <%= text_field_tag :genre2 %> <br>
-    <%= label_tag(:year_lower, "From: ") %>
-    <%= text_field_tag :year_lower %> <br>
-    <%= label_tag(:year_upper, "To: ") %>
-    <%= text_field_tag :year_upper %> <br><br>
-    <%= submit_tag("Submit") %>
-<% end %>
+<h1>Search for book trends!</h1>
 
 <h2>QUERY 2</h2>
 <%= form_tag(query2_path, data: {turbo: false}) do%>
