--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,9 @@
-<h1>THIS IS HOME</h1>
+<img src="/assets/booksmart.png" width="800" height="750" alt="booksmart" class="center"/>
+
+<%# <form action="/home/index">
+    <input type="submit" value="Go to forms" class="center" />
+</form> %>
 
 <form action="/home/index">
-    <input type="submit" value="Go to forms" />
+    <button class="button button1">Go to forms</button>
 </form>
