--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,39 @@
  *= require_tree .
  *= require_self
  */
+
+ .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .centertext {
+    text-align: center;
+  }
+
+  .button {
+    background-color: orange; /* Green */
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    font-size: 16px;
+    margin-left: auto;
+    margin-right: auto;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+
+  .button1 {
+    background-color: white;
+    color: black;
+    border: 2px solid orange;
+  }
+
+  .button1:hover {
+    background-color: orange;
+    color: white;
+  }
