--- a/app/views/home/query1.html.erb
+++ b/app/views/home/query1.html.erb
@@ -1,4 +1,4 @@
-<h1> GRAPH </h1>
+<h1> GRAPH 1</h1>
 <%= 
 line_chart [{:name=> params[:genre1], :data=>Home.query1(params[:genre1], params[:year_lower], params[:year_upper])},
 {:name=> params[:genre2], :data=>Home.query1(params[:genre2], params[:year_lower], params[:year_upper])}]
