--- a/app/views/home/query3.html.erb
+++ b/app/views/home/query3.html.erb
@@ -1,5 +1,5 @@
 <h1> GRAPH 3</h1>
 <%= 
-line_chart [{:name=> params[:genre1], :data=>Home.query3(params[:genre1], params[:year_lower], params[:year_upper])},
-{:name=> params[:genre2], :data=>Home.query3(params[:genre2], params[:year_lower], params[:year_upper])}]
+line_chart [{:name=> params[:genre1], :data=>Home.query3(params[:genre1], params[:year_lower], params[:year_upper], params[:ave_rating])},
+{:name=> params[:genre2], :data=>Home.query3(params[:genre2], params[:year_lower], params[:year_upper], params[:ave_rating])}]
 %> 
