--- a/app/views/home/query4.html.erb
+++ b/app/views/home/query4.html.erb
@@ -1,5 +1,5 @@
 <h1> GRAPH 4</h1>
 <%= 
-line_chart [{:name=> params[:genre1], :data=>Home.query4(params[:genre1], params[:year_lower], params[:year_upper], params[:ave_rating])},
-{:name=> params[:genre2], :data=>Home.query4(params[:genre2], params[:year_lower], params[:year_upper], params[:ave_rating])}]
+line_chart [{:name=> params[:lang1], :data=>Home.query4(params[:lang1], params[:year_lower])},
+{:name=> params[:lang2], :data=>Home.query4(params[:lang2], params[:year_lower])}]
 %> 
