--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,9 @@
 <h1 class="centertext">Search for book trends!</h1>
 
+<%=link_to "Total ", total_path, remote: true%>
+
 <h2>QUERY 1</h2>
+
 <%= form_tag(query1_path, data: {turbo: false}) do%>
     <%= label_tag(:genre1, "Enter genre 1") %>
     <%= text_field_tag :genre1 %> <br>
