Cleaned up query page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,5 +5,5 @@
 </form> %>
 
 <form action="/home/index">
-    <button class="button button1">Go to forms</button>
+    <button class="button buttonOrange">Go to forms</button>
 </form>
