--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,13 +39,13 @@
     cursor: pointer;
   }
 
-  .button1 {
+  .buttonOrange {
     background-color: white;
     color: black;
     border: 2px solid orange;
   }
 
-  .button1:hover {
+  .buttonOrange:hover {
     background-color: orange;
     color: white;
   }
