--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,10 @@
 <h1 class="centertext">Search for book trends!</h1>
 
-<h2>QUERY 1</h2>
+<h2>Compare e-book availability by genre over time:</h2>
 <%= form_tag(query1_path, data: {turbo: false}) do%>
-    <%= label_tag(:genre1, "Enter genre 1") %>
+    <%= label_tag(:genre1, "Enter First Genre:") %>
     <%= text_field_tag :genre1 %> <br>
-    <%= label_tag(:genre2, "Enter genre 2") %>
+    <%= label_tag(:genre2, "Enter Second Genre:") %>
     <%= text_field_tag :genre2 %> <br>
     <%= label_tag(:year_lower, "From: ") %>
     <%= text_field_tag :year_lower %> <br>
@@ -13,7 +13,7 @@
     <%= submit_tag("Submit") %>
 <% end %>
 
-<h2>QUERY 2</h2>
+<h2>Compare books written by prolific authors by genre:</h2>
 <%= form_tag(query2_path, data: {turbo: false}) do%>
     <%= label_tag(:genre1, "Enter First Genre:") %>
     <%= text_field_tag :genre1 %> <br>
@@ -26,9 +26,9 @@
     <%= submit_tag("Submit") %>
 <% end %>
 
-<h2>QUERY 3</h2>
+<h2>Compare books written by authors above a certain rating by genre:</h2>
 <%= form_tag(query3_path, data: {turbo: false}) do%>
-    <%= label_tag(:genre1, "Enter genre 1") %>
+    <%= label_tag(:genre1, "Enter First Genre:") %>
     <%= text_field_tag :genre1 %> <br>
     <%= label_tag(:genre2, "Enter Second Genre:") %>
     <%= text_field_tag :genre2 %> <br>
@@ -41,22 +41,22 @@
     <%= submit_tag("Submit") %>
 <% end %>
 
-<h2>QUERY 4</h2>
+<h2>Compare average rating of books by language:</h2>
 <%= form_tag(query4_path, data: {turbo: false}) do%>
-    <%= label_tag(:lang1, "Enter language 1") %>
+    <%= label_tag(:lang1, "Enter First Language:") %>
     <%= text_field_tag :lang1 %> <br>
-    <%= label_tag(:lang2, "Enter language 2") %>
+    <%= label_tag(:lang2, "Enter Second Language:") %>
     <%= text_field_tag :lang2 %> <br>
     <%= label_tag(:year_lower, "Starting from: ") %>
     <%= text_field_tag :year_lower %> <br><br>
     <%= submit_tag("Submit") %>
 <% end %>
- 
-<h2>QUERY 5</h2>
+
+<h2>Compare books by genre that have perfomed better than another genre:</h2>
 <%= form_tag(query5_path, data: {turbo: false}) do%>
-    <%= label_tag(:genre1, "Enter genre 1") %>
+    <%= label_tag(:genre1, "Enter First Genre:") %>
     <%= text_field_tag :genre1 %> <br>
-    <%= label_tag(:genre2, "Enter genre 2") %>
+    <%= label_tag(:genre2, "Enter Second Genre:") %>
     <%= text_field_tag :genre2 %> <br>
     <%= label_tag(:year_lower, "From: ") %>
     <%= text_field_tag :year_lower %> <br>
