--- a/app/views/home/total.html.erb
+++ b/app/views/home/total.html.erb
@@ -1,1 +1,1 @@
-<div id="content" style="font-size: 50px;  text-align: center; padding-top: 60px;">Total tuple count is: <%=Home.getTupleCount()%></div>
+<div id="content" style="font-size: 50px;  text-align: center; padding-top: 60px;font-family: Segoe UI;">Total tuple count is: <%=Home.getTupleCount()%></div>
